--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,121 +2,148 @@
   min-height: 100vh;
   padding: 0 0.5rem;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  font-family: "Montserrat", sans-serif;
 }
 
-.main {
-  padding: 5rem 0;
+.form {
   flex: 1;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin: 8px 0;
+}
+
+.formContent {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.footer {
-  width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
+.formGroup {
   display: flex;
+  flex-direction: column;
+
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
+  margin-top: 24px;
+  margin-bottom: 36px;
+
+  width: 80vw;
+  max-width: 380px;
 }
 
-.footer img {
-  margin-left: 0.5rem;
+.textField {
+  margin: 12px 0 !important;
 }
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
+.buttonFont {
+  margin-top: 40px !important;
+  text-transform: none !important;
 }
 
 .title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
+  margin-top: 40px;
+  height: 29px;
+  width: 290px;
+  color: #1a2233;
+  font-family: Montserrat;
+  font-size: 24px;
+  font-weight: 600;
+  letter-spacing: -0.44px;
+  line-height: 29px;
   text-align: center;
 }
 
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
+.byClickingTheButt {
+  height: 42px;
+  width: 380px;
+  font-family: Montserrat;
+  font-size: 13px;
+  letter-spacing: -0.24px;
+  line-height: 21px;
+  text-align: center;
 }
 
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+.anchor {
+  color: #0092ed;
+  margin: 0 4px;
 }
 
-.grid {
+.alreadyAMemberSi {
+  height: 24px;
+  width: 380px;
+  font-family: Montserrat;
+  font-size: 15px;
+  font-weight: 600;
+  letter-spacing: -0.24px;
+  line-height: 19px;
+  text-align: center;
+}
+
+.poster {
+  position: relative;
+  height: 100vh;
+  width: 480px;
+  background: linear-gradient(
+      91.07deg,
+      rgba(66, 227, 230, 0.34) 0%,
+      rgba(255, 255, 255, 0) 100%
+    ),
+    linear-gradient(135deg, #32ac71 0%, #4268e6 100%);
+
   display: flex;
-  align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
+  align-items: center;
+  flex-direction: column;
+
+  color: white;
 }
 
-.card {
-  margin: 1rem;
-  flex-basis: 45%;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
+.image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+.mortgageShoppingEx {
+  height: 52px;
+  width: 380px;
+  color: #ffffff;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: 0;
+  line-height: 26px;
+  text-align: center;
+  margin-top: 72px;
 }
 
-.card h3 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
+.rectangleSlim {
+  margin-top: 16px;
+  height: 2px;
+  width: 76px;
+  opacity: 0.5;
+  border-radius: 2px;
+  background-color: #ffffff;
 }
 
 @media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
+  .container {
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+  }
+
+  .poster {
+    width: 100vw;
+  }
+
+  .mortgageShoppingEx {
+    margin-top: 36px;
   }
 }
