--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -28,7 +28,10 @@
   justify-content: center;
   align-items: center;
 
-  margin: 8px 0;
+  margin: 16px 0;
+
+  min-height: 100vh;
+  max-height: 100vh;
 }
 
 .formContent {
