--- a/components/poster.module.css
+++ b/components/poster.module.css
@@ -62,7 +62,7 @@
   }
 }
 
-@media (min-width: 500px) and (max-width: 900) {
+@media (min-width: 500px) and (max-width: 900px) {
   .poster {
     display: none;
   }
