firebase + next-auth + profile page data

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -66,6 +66,15 @@
   text-align: center;
 }
 
+.googleAuthButton {
+  min-width: 380px;
+  height: 6vh;
+  min-height: 28px;
+  font-size: large;
+  border: none;
+  box-shadow: 1px 1px #ddd;
+}
+
 @media (max-width: 900px) {
   .container {
     flex-direction: column-reverse;
