--- a/components/utils/form-input.module.css
+++ b/components/utils/form-input.module.css
@@ -1,10 +1,11 @@
 .formInput {
-  margin: 16px 0 !important;
+  margin: 18px 0 !important;
   /* padding: 18px 0 imp !important; */
 
   height: 7vh;
   width: 80vw;
   max-width: 380px;
+  min-height: 56px;
 }
 
 .root {
