--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -66,13 +66,14 @@
   text-align: center;
 }
 
-.googleAuthButton {
-  min-width: 380px;
-  height: 6vh;
+.secondaryButton {
+  /* min-width: 380px; */
+  width: 100%;
+  /* height: 6vh; */
   min-height: 28px;
-  font-size: large;
-  border: none;
-  box-shadow: 1px 1px #ddd;
+  /* font-size: large; */
+  /* border: none; */
+  box-shadow: 1px 1px #ddd, -1px -1px #ddd;
 }
 
 @media (max-width: 900px) {
