--- a/components/ProfileForms/profile-pic.module.css
+++ b/components/ProfileForms/profile-pic.module.css
@@ -2,7 +2,7 @@
   height: 100px;
   width: 100px;
   border-radius: 50%;
-  background-color: black;
+  background-color: hsla(0, 0%, 25%, 0.4);
 
   display: flex;
   justify-content: center;
@@ -16,4 +16,21 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.hiddenInput {
+  display: none;
+}
+
+.iconButton {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+.profileUpload {
+  position: relative;
+}
+
+@media screen and (max-width: 520px) {
 }
