--- a/components/utils/upload-image-thumb.module.css
+++ b/components/utils/upload-image-thumb.module.css
@@ -15,6 +15,8 @@
   align-items: flex-start;
   flex-direction: column;
   margin: 24px 0;
+
+  max-width: 480px;
 }
 
 .thumbArea {
@@ -22,4 +24,7 @@
   justify-content: space-between;
   align-items: flex-start;
   width: 100%;
+
+  border-bottom: 1px solid #ddd;
+  padding-bottom: 8px;
 }
