--- a/components/profile-form.module.css
+++ b/components/profile-form.module.css
@@ -13,6 +13,7 @@
 @media screen and (min-width: 900px) {
   .profileForm {
     max-width: 1000px;
+    min-width: 770px;
   }
 
   .profileFormButtons {
